<resources>
    <string name="app_name">GMC</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="loading">Loading…</string>
    <string name="settings">Settings</string>
    <string name="purchases">Purchases</string>
    <string name="sales">Sales</string>
    <string name="expenses">Expenses</string>
    <string name="stats">Payment Overview</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="logout">Logout</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_category">New Category</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="customers">Customers</string>
    <string name="suppliers">Suppliers</string>




    <item name="text_watcher_tag" type="id" />

    <!-- 📅 For showing formatted date like 11/10/2025 -->
    <string name="date_format">📅 Date: %02d-%02d-%04d</string>
    <string name="rs">Rs. %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="accounts">Accounts</string>
</resources>