<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/purchaseListFragment"
        android:icon="@drawable/ic_buy"
        android:orderInCategory="100"
        android:title="@string/purchases" />

    <item
        android:id="@+id/milkSaleListFragment"
        android:icon="@drawable/ic_sales"
        android:orderInCategory="200"
        android:title="@string/sales" />

    <item
        android:id="@+id/expenseFragment"
        android:icon="@drawable/ic_expense"
        android:orderInCategory="300"
        android:title="@string/expenses" />

    <item
        android:id="@+id/profitFragment"
        android:icon="@drawable/ic_history"
        android:orderInCategory="400"
        android:title="Profit" />

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_stats"
        android:orderInCategory="50"
        android:title="Dashboard" />


</menu>
