<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- Tools / Settings -->
    <group android:id="@+id/menu_group_tools">
        <item
            android:id="@+id/driveBackupFragment"
            android:icon="@drawable/ic_backup"
            android:orderInCategory="200"
            android:title="@string/backup_restore"
            app:showAsAction="never" />

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="201"
            android:title="@string/settings"
            app:showAsAction="never" />

    </group>

    <!-- Account -->
    <group android:id="@+id/menu_group_account">
        <item
            android:id="@+id/action_logout"
            android:orderInCategory="300"
            android:title="@string/logout"
            app:showAsAction="never" />
    </group>

    <!-- Info -->
    <group
        android:id="@+id/menu_group_info"
        android:orderInCategory="400">
        <item
            android:id="@+id/menu_copyright"
            android:enabled="false"
            android:title="© 2026 MilkLedger"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_developer"
            android:enabled="false"
            android:title="Dev. by M. Imran Ali Sajid"
            app:showAsAction="never" />
    </group>

</menu>
